--- a/pom.xml
+++ b/pom.xml
@@ -45,9 +45,9 @@
 
     <distributionManagement>
         <repository>
-            <id>github</id>
-            <name>GitHub starcoin-java Apache Maven Packages</name>
-            <url>https://maven.pkg.github.com/starcoinorg/starcoin-java</url>
+            <id>sonatype-nexus-staging</id>
+            <name>Sonatype Nexus release repository</name>
+            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
         </repository>
         <snapshotRepository>
             <id>ossrh</id>
