--- a/.github/workflows/maven_deploy.yml
+++ b/.github/workflows/maven_deploy.yml
@@ -21,8 +21,7 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 11
-          distribution: 'oracle'
-          server-id: sonatype-nexus-snapshots
+          server-id: ossrh
           server-username: MAVEN_USERNAME
           server-password: MAVEN_CENTRAL_TOKEN
 
