--- a/.github/workflows/maven_deploy.yml
+++ b/.github/workflows/maven_deploy.yml
@@ -27,6 +27,7 @@ jobs:
 
       - name: Install gpg secret key
         run: |
+          export GPG_TTY=$(tty)
           cat <(echo -e "${{ secrets.OSSRH_GPG_SECRET_KEY }}") | gpg --import
           gpg --list-secret-keys --keyid-format LONG
 
