--- a/.github/workflows/maven_deploy.yml
+++ b/.github/workflows/maven_deploy.yml
@@ -27,7 +27,8 @@ jobs:
           server-password: ${{ secrets.OSSRH_TOKEN }}
           gpg-private-key: ${{ secrets.OSSRH_GPG_SECRET_KEY }}
           gpg-passphrase: ${{ secrets.OSSRH_GPG_PASSPHRASE }}
-          cache: 'maven
+          cache: 'maven'
+
 
       - name: Publish to Maven Central repository
         env:
